--- a/public/posts/style.css
+++ b/public/posts/style.css
@@ -1,20 +1,25 @@
+/* fonts */
+
 @font-face {
 	font-family: 'Crimson';
 	src: url("font/crimson-roman.woff") format("woff");
 	font-display: swap;
 }
+
 @font-face {
 	font-family: 'Crimson';
 	src: url("font/crimson-italic.woff") format("woff");
 	font-style: italic;
 	font-display: swap;
 }
+
 @font-face {
 	font-family: 'Crimson';
 	src: url("font/crimson-semibold.woff") format("woff");
 	font-weight: 600;
 	font-display: swap;
 }
+
 @font-face {
 	font-family: 'Crimson';
 	src: url("font/crimson-semibolditalic.woff") format("woff");
@@ -22,12 +27,14 @@
 	font-weight: 600;
 	font-display: swap;
 }
+
 @font-face {
 	font-family: 'Crimson';
 	src: url("font/crimson-bold.woff") format("woff");
 	font-weight: bold;
 	font-display: swap;
 }
+
 @font-face {
 	font-family: 'Crimson';
 	src: url("font/crimson-bolditalic.woff") format("woff");
@@ -36,43 +43,71 @@
 	font-display: swap;
 }
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, a, abbr, acronym, address, big, cite, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, u, center, dl, dt, dd, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
+
+/* CSS reset, modified from http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 | License: none (public domain) */
+
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
+/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
-body { line-height: 1; }
+/* body { line-height: 1; } */
+ol, ul { list-style: none; }
 blockquote, q { quotes: none; }
 blockquote:before, blockquote:after, q:before, q:after { content: ''; content: none; }
 table { border-collapse: collapse; border-spacing: 0; }
 
-pre { font-size: 93%; padding: 0.5em; background-color: rgba(0, 0, 0, 0.05); overflow: auto; }
-code { font-size: 93%; }
 
-table { margin-left: auto; margin-right: auto; }
-td:last-child, th:last-child { border-right: 0; }
-th { border-bottom: 1px solid #dcdcdc; font-weight: bold; }
-th, td { border-right: 1px solid #dcdcdc; padding: 4px 12px; }
+/* column layout */
 
-body {
-	font: normal 16px/24px "Crimson", Georgia, serif;
+main {
+	display: grid;
+	grid-template-columns: 1fr 38rem 14rem 1fr;
+	grid-template-areas: ". main . .";
+	margin-top: 2rem;
+	height: 100%;
+}
+
+article {
+	grid-area: main;
+	padding: 0 1.5rem;
+}
+
+aside {
+	position: absolute;
+	margin-left: 38rem;
+	width: 14rem;
+	font-size: .85rem;
+}
+
+
+/* text styling */
+
+html {
+	font: normal normal normal 17px/1.4 "Crimson", Georgia, serif;
+}
+
+h1 {
+	font-size: 2rem;
+	text-align: center;
+	padding: 1.5rem 0;
+}
+
+h2 {
+	font-weight: 600;
+	font-size: 1.6rem;
+	margin: 4.3rem 0 1.5rem 0;
+	padding-bottom: .2rem;
+}
+
+h3 {
+	font-weight: 600;
+	font-size: 1.25rem;
+	margin: 40px 0 0 0;
+	padding-bottom: 3px;
 }
 
 p {
-	display: block;
-	margin-block-start: 1em;
-	margin-block-end: 1em;
-	margin-inline-start: 0px;
-	margin-inline-end: 0px;
-}
-
-img {
-	display: block;
-	max-width: 90%;
-	height: auto;
-	margin: 25px auto;
-}
-
-a {
-	color: #125B97;
-	text-decoration: none;
+	margin: 1em 0;
+	overflow-wrap: break-word;
 }
 
 em {
@@ -83,53 +118,88 @@ strong {
 	font-weight: bold;
 }
 
-h1 {
-	font: 40px "Crimson", Georgia, serif;
-	text-align: center;
-	padding: 20px 0px;
+a {
+	color: #125B97;
+	text-decoration: none;
 }
 
-h2 {
-	font: 600 30px "Crimson", Georgia, serif;
-	margin: 69px 0 25px 0;
-	padding-bottom: 3px;
+
+/* code blocks */
+
+pre { font-size: 93%; padding: 0.5em; background-color: rgba(0, 0, 0, 0.05); overflow: auto; }
+code { font-family: monospace; font-size: 93%; tab-size: 4; }
+
+
+/* tables */
+
+table { margin-left: auto; margin-right: auto; }
+td:last-child, th:last-child { border-right: 0; }
+th { border-bottom: 1px solid #dcdcdc; font-weight: bold; }
+th, td { border-right: 1px solid #dcdcdc; padding: 4px 12px; }
+
+
+/* images */
+
+img {
+	display: block;
+	max-width: 90%;
+	height: auto;
+	margin: 25px auto;
 }
 
-h3 {
-	font: 600 20px "Crimson", Georgia, serif;
-	margin: 40px 0 0 0;
-	padding-bottom: 3px;
-}
 
-@media only screen {
-	body { margin: 59px 10px; }
-	
-	article {
-		margin: auto;
-		position: relative;
-		max-width: 715px;
+/* mobile layout */
+
+@media only screen and (max-width: 60rem) {
+	html {
+		font-size: 120%;
 	}
-}
 
-@media only screen and (max-width: 800px) {
+	main {
+		display: grid;
+		grid-template-columns: 1fr 24rem 1fr;
+		grid-template-areas: ". main . .";
+	}
+
 	.katex-display { overflow: auto hidden; }
 }
 
+@media print, (max-width: 60rem) {
+	aside {
+		border-top: 1px solid lightgray;
+		border-bottom: 1px solid lightgray;
+		padding: .5rem;
+		position: relative;
+		margin-left: 0;
+		width: inherit;
+	}
+}
+
+
+/* styling for printing */
+
 @media print {
+	html { font-size: 15px; }
 	h1, h2, h3, h4 { page-break-after: avoid; }
 	pre { overflow: visible; }
 }
 
-/* to display it like the pdf viewer in chrome or firefox */
-/*@media only screen and (min-width: 850px) {
-	body { background-color: #525659; }
-	
-	article {
-		background-color: #ffffff;
-		box-shadow: 1px 1px 3px 2px #333333;
-	}
-}*/
-
 @page {
-    margin: 25mm;
+	margin: 25mm;
+}
+
+
+/* hyphenation */
+
+p, aside {
+	-webkit-hyphens: auto;
+	-webkit-hyphenate-limit-before: 3;
+	-webkit-hyphenate-limit-after: 3;
+	-webkit-hyphenate-limit-chars: 6 3 3;
+	-webkit-hyphenate-limit-last: always;
+	-webkit-hyphenate-limit-zone: 8%;
+	hyphens: auto;
+	hyphenate-limit-chars: 6 3 3;
+	hyphenate-limit-last: always;
+	hyphenate-limit-zone: 8%
 }
