Add link to license in footer

--- a/templates/kotlinbyexample/example.jinja
+++ b/templates/kotlinbyexample/example.jinja
@@ -41,7 +41,7 @@
 				{% endfor %}
 			</table>
 
-			<p class="footer">by <a href="https://rubenvannieuwpoort.nl">Ruben van Nieuwpoort</a> | <a href="https://github.com/rubenvannieuwpoort/site/blob/master/src/kotlinbyexample">source</a> | TODO: add license<br/>based on <a href="https://gobyexample.com">Go by Example</a> by <a href="https://markmcgranaghan.com">Mark McGranaghan</a> and <a href="https://eli.thegreenplace.net">Eli Bendersky</a></p>
+			<p class="footer">by <a href="https://rubenvannieuwpoort.nl">Ruben van Nieuwpoort</a> | <a href="https://github.com/rubenvannieuwpoort/site/blob/master/src/kotlinbyexample">source</a> | <a href="https://creativecommons.org/licenses/by/3.0/">license</a><br/>based on <a href="https://gobyexample.com">Go by Example</a> by <a href="https://markmcgranaghan.com">Mark McGranaghan</a> and <a href="https://eli.thegreenplace.net">Eli Bendersky</a></p>
 		</div>
 	</body>
 </html>
